--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ apply plugin: 'signing'
 
 group = 'io.dgraph'
 archivesBaseName = 'dgraph4j'
-version = '1.1.0'
+version = '1.1.0-dd'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
